--- a/views/blogs/show.ejs
+++ b/views/blogs/show.ejs
@@ -1,6 +1,18 @@
 
-<% include ../partials/header %>
+
+ <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel = "stylesheet"  type = "text/css" href = "https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.css">
+ 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.13/semantic.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:700" rel="stylesheet">
+
+
 
 <style>
    #labels{
@@ -103,36 +115,77 @@
     background-color:#b7b7b7;
   }
   
+  
+
+  
+  
+  
 </style>
 
- <div id="project" class= "container">
-    <form class = "ui form" action="/blogs/<%=blog._id%>/run" method = "POST"> 
-      <div class="ui grid">
- 
-  <div class="five wide column">
-        <div class = "field">
-      <label id="labels">HTML</label>
-       <textarea id="html" type = "text" name = "html" spellcheck="false" rows="10"  readonly ><%= blog.html%></textarea>
-        </div>
-    </div>
+ <div>
+    <form  action="/blogs/<%=blog._id%>/run" method = "POST"> 
+     
     
-  <div class="five wide column">
-     <div class = "field">
-        <label id="labels">CSS</label>
-   <textarea id ="css" type = "text" name = "css" spellcheck="false" rows="10"  readonly ><%= blog.css%></textarea>
-        </div>
-    </div>
-    
-  <div class="five wide column">
-    <div class = "field">
-        <label id="labels">JAVA SCRIPT</label>
-    <textarea id="js" type = "text" name = "javascript" spellcheck="false" rows="10"  readonly ><%= blog.javascript%></textarea>
+      <div class="row" >
+  <div class="col col-lg-8">
+    <div class="row" style="border:solid 3px Red;">
+   <div class="col col-lg-12" style="height:50px;background-color:#2d2d2d;">
+     <div class="row">
+     <div  id="htmlB" class="col col-lg-4" style="border-right:solid 2px black;height:100%;
+                                                 text-align:center;
+                                                 color:white;
+                                                 
+                                                 "><p style="margin-top:15px">
+       <span style="font-size:20px;"><strong>HTML</strong></span>
+       </p></div>
+     <div id="cssB" class="col col-lg-4" style="border-right:solid 2px black;height:100%;
+                                                text-align:center;
+                                                color:white;
+                                               
+                                                "><p style="margin-top:15px">
+       <span style="font-size:20px;"><strong>CSS</strong></span>
+       </p></div>
+     <div id="jsB" class="col col-lg-4" style="height:100%;
+                                               text-align:center;
+                                               color:white;
+                                              
+                                               "><p style="margin-top:15px">
+       <span style="font-size:20px;"><strong>JAVASCRIPT</strong></span>
+       </p></div>
      </div>
-    </div>
+      </div>
+      
+      <div class="row">
+          <div class="col col-lg-12" style="height:500px;">
+      <textarea name = "html" id="htmlDisplay" style="width:100%;height:100%;background-color:<%=currentUser.FavouriteColor%>;
+                                        border: solid 1px <%=currentUser.FavouriteColor%>;color:white;
+                                        font-family: 'Roboto Mono', monospace;"
+                type = "text" name = "html" spellcheck="false" rows="10"  readonly ><%= blog.html%></textarea>
     
+     <textarea name = "css" id="cssDisplay" style="width:100%;height:100%; border: solid 1px <%=currentUser.FavouriteColor%>;
+                                      background-color:<%=currentUser.FavouriteColor%>;color:white;
+                                      font-family: 'Roboto Mono', monospace;"
+                type = "text" name = "html" spellcheck="false" rows="10"  readonly ><%= blog.css%></textarea>
     
-    <div class="one wide column">
-      <button id="preview" class="ui  medium  black button" type="submit"  ><span id="terminal"><i class="terminal icon"></i></span></button>
+     <textarea name = "javascript" id="jsDisplay" style="width:100%;height:100%; border: solid 1px <%=currentUser.FavouriteColor%>;
+                                     background-color:<%=currentUser.FavouriteColor%>;color:white;
+                                     font-family: 'Roboto Mono', monospace;"
+                type = "text" name = "html" spellcheck="false" rows="10"  readonly ><%= blog.javascript%></textarea>
+    
+      </div>
+      </div>
+
+  </div>
+  </div>
+        
+    <div class="col col-lg-4"> 
+      <button id="preview"  type="submit"  ><span id="terminal"><i class="terminal icon"></i></span></button>
+        </div>
+</div>
+      
+   
+      
+     
     </div>
       </form>
 </div>
@@ -169,8 +222,11 @@
   
   
   
+
   
- 
+  
+  
+  
 
   
   
@@ -265,7 +321,56 @@
                           
 
 
+  
+
+<style>
+  .Selected{
+    background-color:<%=currentUser.FavouriteColor%>;
+}
+</style>
 
 
 
-<% include ../partials/footer %>
+<script>
+  
+  $('#cssDisplay').hide();
+  $('#jsDisplay').hide();
+  $('#htmlB').addClass("Selected");
+  
+  $('#htmlB').click(function(){
+    
+  $('#htmlB').toggleClass("Selected");
+  $('#cssB').removeClass("Selected");
+  $('#jsB').removeClass("Selected");
+    
+  $('#cssDisplay').hide();
+  $('#htmlDisplay').show();
+  $('#jsDisplay').hide();
+  }) 
+  
+  $('#cssB').click(function(){
+    
+   $('#cssB').toggleClass("Selected");
+   $('#htmlB').removeClass("Selected");
+  $('#jsB').removeClass("Selected");
+    
+  $('#cssDisplay').show();
+  $('#htmlDisplay').hide();
+  $('#jsDisplay').hide();
+  })
+  
+   $('#jsB').click(function(){
+     
+   $('#jsB').toggleClass("Selected");
+   $('#cssB').removeClass("Selected");
+  $('#htmlB').removeClass("Selected");
+     
+  $('#jsDisplay').show();
+  $('#htmlDisplay').hide();
+  $('#cssDisplay').hide();
+  })
+  
+  
+</script>
+  
+
